--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 
 backend:
-  name: git-gateway
-  branch: main
+  name: test-repo
+  local_backend: true
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
