--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,11 +1,10 @@
 
 backend:
   name: github
-  repo: tvoje‑user/fest-classic-rock-band
+  repo: YOUR_GITHUB_USERNAME/fest-classic-rock-band  # exactly your GitHub repo name
   branch: main
   auth_scope: "repo"
-  app_id: "${GITHUB_CLIENT_ID}"
-
+  app_id: "Iv23liqhPDCxjnMiDD6I"       # paste the Client ID here
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
 
