--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,24 @@
 [build]
-  publish = "."    # Ensure we publish from the repo root
+  publish = "."    # hľadaj index.html tu, v repozitári
 
-# Serve the raw CMS config & index:
+# 1) Povoľ priamy prístup ku config.yml
 [[redirects]]
   from   = "/admin/config.yml"
   to     = "/admin/config.yml"
   status = 200
 
+# 2) Povoľ priamy prístup k index.html loaderu
 [[redirects]]
   from   = "/admin/index.html"
   to     = "/admin/index.html"
   status = 200
 
-# Everything else under /admin → serve the SPA loader
+# 3) Presmeruj všetko ostatné pod /admin na SPA loader
+[[redirects]]
+  from   = "/admin"
+  to     = "/admin/index.html"
+  status = 200
+
 [[redirects]]
   from   = "/admin/*"
   to     = "/admin/index.html"
