--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,16 @@
   publish = "."
 
 [[redirects]]
+  from   = "/admin/config.yml"
+  to     = "/admin/config.yml"
+  status = 200
+
+[[redirects]]
+  from   = "/admin/index.html"
+  to     = "/admin/index.html"
+  status = 200
+
+[[redirects]]
   from   = "/admin"
   to     = "/admin/index.html"
   status = 200
