--- a/content/homepage.yml
+++ b/content/homepage.yml
@@ -1,6 +1,6 @@
-band_name: Fest Classic Rock Band
-tagline: Rockové hity, ktoré nezabúdajú
-cover_image: /images/uploads/510801041_1216645760162191_3694330071767650536_n.jpg
-about_text: Sme skupina skúsených rockových hráčov, ktorí milujú klasiku. Hráme
-  cover verzie srdcom.
-contact_email: booking@festclassicrockband.com
+band_name: "Fest Classic Rock Band"
+tagline: "Rockové hity, ktoré nezabúdajú"
+cover_image: "/images/uploads/cover.jpg"
+placeholder_image: "/images/uploads/hero-placeholder.jpg"
+about_text: "Sme skúsená kapela, čo hrá klasiku srdcom."
+contact_email: "booking@festclassicrockband.com"
