--- a/admin/config.yml
+++ b/admin/config.yml
@@ -33,6 +33,7 @@ collections:
           - { label: "Placeholder fotka (ak cover chýba)", name: "placeholder_image", widget: "image" }
           - { label: "O nás (text)", name: "about_text", widget: "markdown" }
           - { label: "Email pre kontakt", name: "contact_email", widget: "string", default: "booking@festclassicrockband.com" }
+          - { label: "Logo (na cover)", name: "logo_image", widget: "image" }
 
 
   - name: "members"
