--- a/content/homepage.yml
+++ b/content/homepage.yml
@@ -2,5 +2,6 @@ band_name: "Fest Classic Rock Band"
 tagline: "Rockové hity, ktoré nezabúdajú"
 cover_image: "/images/uploads/cover.jpg"
 placeholder_image: "/images/uploads/hero-placeholder.jpg"
+logo_image: "/images/uploads/logo.png"
 about_text: "Sme skúsená kapela, čo hrá klasiku srdcom."
 contact_email: "booking@festclassicrockband.com"
