--- a/content/homepage.yml
+++ b/content/homepage.yml
@@ -1,7 +1,7 @@
 band_name: Fest Classic Rock Band
 tagline: Rockové hity, ktoré nezabúdajú
 cover_image: /images/uploads/cover_old.jpg
-placeholder_image: /images/uploads/logo_extracted_with_red.png
+placeholder_image: /images/uploads/cover.jpg
 about_text: Sme skúsená kapela, čo hrá klasiku srdcom.
 contact_email: booking@festclassicrockband.com
-logo_image: /images/uploads/logo.png
+logo_image: /images/uploads/logo_extracted_with_red.png
