Update Úvodná stránka “homepage”

--- a/content/homepage.yml
+++ b/content/homepage.yml
@@ -1,7 +1,7 @@
 band_name: Fest Classic Rock Band
 tagline: Rockové hity, ktoré nezabúdajú
-cover_image: ""
-placeholder_image: /images/uploads/cover.jpg
-logo_image: ""
+cover_image: /images/uploads/cover_old.jpg
+placeholder_image: ""
+logo_image: /images/uploads/logo_extracted_with_red.png
 about_text: Sme skúsená kapela, čo hrá klasiku srdcom.
 contact_email: booking@festclassicrockband.com
