Update Homepage “homepage”

--- a/content/homepage.yml
+++ b/content/homepage.yml
@@ -4,6 +4,5 @@ cover_image: /images/uploads/cover_old.jpg
 placeholder_image: ""
 logo_image: /images/uploads/logo_extracted_with_red.png
 about_text: Sme skúsená kapela, čo hrá klasiku srdcom.
-contact_email: booking@festclassicrockband.com
-facebook_url: "https://www.facebook.com/profile.php?id=100063581830181"  # nahradíš cez CMS
-
+contact_email: kollar.miroslav1@gmail.com
+facebook_url: https://www.facebook.com/profile.php?id=100063581830181
