--- a/content/homepage.yml
+++ b/content/homepage.yml
@@ -5,8 +5,7 @@ placeholder_image: ""
 logo_image: /images/uploads/logo_extracted_with_red.png
 about_text: Sme skúsená kapela, čo hrá klasiku srdcom.
 contact_email_primary: kollar.miroslav1@gmail.com
-contact_email_secondary: "info@festclassicrockband.com"
+contact_email_secondary: kulimarian@azet.sk
 phone_numbers:
-  - "+421 910 123 456"
-  - "+421 903 654 321"
+  - "+421 903 641 071"
 facebook_url: https://www.facebook.com/profile.php?id=100063581830181
